# ml-tech-task-sonia-sreenjoy

./: .gitignore  INSTALL.md  Makefile  README.md  cli.py  main.py  models.py  pyproject.toml
models/: lightgbm_model.txt
src/: data.py  evaluate.py  features.py  train.py
