[project]
name = "ml-tech-task-sonia-sreenjoy"
version = "0.1.0"
description = "Medical Text Classifier (DE) using LightGBM"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lightgbm>=4.3.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "spacy>=3.7.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "shap>=0.46.0",
    "numba>=0.59.0",
    "click>=8.1.0",
    "joblib>=1.3.0",
    "tqdm>=4.66.0",
    "datasets>=2.18.0",
    "huggingface-hub>=0.20.0",
]

[project.scripts]
medical-classifier = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evaluate.py"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]
