[project]
name = "ml-tech-task-sonia-sreenjoy"
version = "0.1.0"
description = "Medical Text Classifier (DE) using LightGBM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ML libraries
    "lightgbm==4.3.0",
    "scikit-learn==1.4.2",
    "pandas==2.2.1",
    "numpy==1.26.4",

    # NLP - SpaCy stack (exact versions that work together, after loads of trial and error)
    "spacy==3.7.4",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "thinc==8.2.3",
    "cymem==2.0.8",
    "preshed==3.0.9",
    "murmurhash==1.0.10",
    "blis==0.7.11",
    "wasabi==1.1.2",
    "srsly==2.4.8",
    "catalogue==2.0.10",
    "typer==0.9.0",
    "pydantic>=2.0.0,<3.0.0",
    "langcodes>=3.2.0,<4.0.0",
    "weasel>=0.3.0,<0.5.0",
    "matplotlib==3.8.3",
    "seaborn==0.13.2",
    "shap==0.45.0",
    "click==8.1.7",
    "joblib==1.3.2",
    "tqdm==4.66.2",
    "datasets==2.18.0",
    "huggingface-hub==0.21.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]
